--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -19,4 +19,4 @@ COPY . .
 EXPOSE ${PORT:-10000}
 
 # Start the application
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-10000}"]
+CMD ["python", "main.py"]
